# saskan-lore

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0e99af659a1b_add_porter_stemmer_to_claims_fts_.py  791013d72aa0_add_foreign_keys.py  b6b114a51559_initial_schema.py  c2d4a8f3e610_add_claims_fts.py  e7f3a2c91d40_add_eval_question_id.py
docs/architecture/decisions/: adr_000_index.md  adr_001.md  adr_002.md  adr_003.md  adr_004.md  adr_005.md  adr_006.md  adr_007.md  adr_008.md
docs/design/: backlog.md  basic_design_notes_001.odt  design_000_index.md  reference.md  workflows.md
docs/design/pull_requests/: pr_000_index.md
docs/design/r0_foundation/: design.md
docs/design/r1_database/: test_cases.md
docs/design/r2_ingestion/: design.md  test_cases.md
docs/design/r4_review_load/: design.md  test_cases.md
docs/design/r5_retrieval/: design.md  test_cases.md
docs/design/r6_evaluation/: design.md  eval_export_20260404_163644.json  eval_export_20260627_204423.json  system_test.md  test_cases.md
docs/guides/: reference.md  user.md  workflows.md
memory/: MEMORY.md  feedback_changelog_discipline.md  project_overview.md  user_context.md
saskan-lore/analyzer/: chunker.py
saskan-lore/data/schema/: database_schema.py  extract_schema.json  source_span.json  testing_schema.json
saskan-lore/infra/config/: env.example
saskan-lore/infra/log/: logger.py
saskan-lore/loader/: load_metadata.py
saskan-lore/prompts/: extract_claims.txt  structure_chunks_metadata.txt  structure_claims_metadata.txt
saskan-lore/tools/: poetry_activate
saskan-lore/tools/utils/: file_io.py  match_semver.py  platform.py  shell.py  stamps.py
saskan_lore/analyzer/: answer.txt  answering.py  character_counter.py  chunker.py  evaluate.py  evaluate_result.py  extract_claims.txt  extractor.py  inference.py  retrieval.py  staging.py  structure_claims_metadata.txt
saskan_lore/data/: models.py
saskan_lore/data/eval/: varkaar_questions.json
saskan_lore/data/lore_texts/: COPYRIGHT
saskan_lore/data/schema/: data_schema.py  database_schema.py  extract_schema.json  testing_schema.json
saskan_lore/infra/config/: env.example
saskan_lore/infra/db/: db.py  dba.py  init_db.py
saskan_lore/infra/log/: logger.py
saskan_lore/loader/: ingest.py  load_chunks.py  load_entities.py  load_eval_questions.py  load_metadata.py  load_relationships.py  load_reviewed.py  register_lore_text.py  review_staging.py
saskan_lore/tools/utils/: file_io.py  match_semver.py  platform.py  shell.py  stamps.py
saskan_lore/utils/: file_io.py  match_semver.py  platform.py  shell.py  stamps.py
scripts/: commit.sh  db_summary.py  load_reviewed.sh  make_tree.sh  poetry_activate.sh  release.sh  row_counts.py  setenv.sh  show_eval_results.py
tests/: conftest.py
tests/fixtures/: synthetic_lore.txt
tests/integration/: conftest.py  test_r6_integration.py
tests/unit/r1_database/: test_r1_db.py
tests/unit/r2_ingestion/: test_r2_ingestion.py
tests/unit/r3_extraction/: conftest.py  test_r3_extraction.py
(+27 files in other folders)
