[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "saskan-lore"
version = "0.6.1"
description = "Saskan Lands Lore Assistant."
license = "MIT"
authors = ["Genuine Merit Software <genuinemerit@pm.me>"]
readme = "README.md"
keywords = ["game", "saskantinon", "Saskan Lands", "saskan", "rpg"]

# Single top-level package
# Poetry will auto-discover packages with __init__.py.
packages = [{ include = "saskan_lore" }]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Role-Playing",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

# Ship common meta/docs if you publish; harmless for apps
include = [
  "AUTHORS.md",
  "CHANGELOG.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "README.md",
  "LICENSE",
  "docs/**/*",
  "saskan_lore/data/**/*"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Core runtime (lean; add more as they become truly required at runtime)
Levenshtein = "^0.25"
numpy = "^2.0"
openai = "^1.0"
pdfminer-six = "^20231228"
rich = "^13.7"
alembic = "^1.13"
SQLAlchemy = "^2.0"

# Heavy/optional at runtime → kept as extras
nltk = { version = "^3.9", optional = true }
pandas = { version = "^2.2", optional = true }

# Databases
# Default: stdlib sqlite3 via SQLAlchemy (no extra driver needed)
# Optional Postgres support (sync)
psycopg = { version = "^3.2", optional = true }
typer = {extras = ["all"], version = "^0.16.1"}
jsonschema = "^4.25.1"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20250822"
psutil = "^7.0.0"
huggingface-hub = "^1.8.0"
llama-cpp-python = "^0.3.19"
tabulate = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3"
isort = "^5.13"
ruff = "^0.8"
pytest = ">=8.3,<10.0"
coverage = "^7.6"
mypy = "^1.11"  # optional, but good to have
pre-commit = "^4.3.0"
import-linter = "^2.4"

[tool.poetry.extras]
analytics = ["pandas", "nltk"]
gui = ["pygame"]
postgres = ["psycopg"]

[tool.poetry.scripts]
saskan-lore = "saskan_lore.loader.ingest:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/genuinemerit/saskan-lore/issues"
"Documentation" = "https://github.com/genuinemerit/saskan-wiki/wiki"
"Source Code" = "https://github.com/genuinemerit/saskan-lore"

# -------------------------
# Tooling configuration
# -------------------------

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["saskan_lore"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast, isolated unit tests (no I/O, no external services)",
  "integration: cross-layer tests; may use real files, DB, or external APIs",
]

[tool.mypy]
python_version = "3.12"
packages = ["saskan_lore"]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
